{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 6,
  "lineage": "e8392ea4-6ef5-c41f-bd8f-8af4b4643c06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "development",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a648fb5cc86fb74",
            "arn": "arn:aws:ec2:ap-southeast-2:089656430107:instance/i-02912906133e066e9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f8590317489883c9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02912906133e066e9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-login",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6ab066b7e1bbd5b",
            "private_dns": "ip-172-31-42-243.ap-southeast-2.compute.internal",
            "private_ip": "172.31.42.243",
            "public_dns": "ec2-3-25-131-154.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.25.131.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bb0aeeec3081a7a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-egress-tls-example",
              "default-ping-example",
              "default-ssh-example",
              "default-web-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d84fbbae",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03378a61b838231b1",
              "sg-052101df876147538",
              "sg-0673859c1aa769b4f",
              "sg-06abb8c58e470e821"
            ]
          },
          "dependencies": [
            "aws_security_group.egress-tls",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress-tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:089656430107:security-group/sg-0673859c1aa769b4f",
            "description": "Default security group that allows inbound and outbound traffic from all instances in the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0673859c1aa769b4f",
            "ingress": [],
            "name": "default-egress-tls-example",
            "name_prefix": null,
            "owner_id": "089656430107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "egress-tls-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-4a24292f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-ICMP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:089656430107:security-group/sg-052101df876147538",
            "description": "Default security group that allows to ping the instance",
            "egress": [],
            "id": "sg-052101df876147538",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "default-ping-example",
            "name_prefix": null,
            "owner_id": "089656430107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ping-ICMP-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-4a24292f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:089656430107:security-group/sg-06abb8c58e470e821",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [],
            "id": "sg-06abb8c58e470e821",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-ssh-example",
            "name_prefix": null,
            "owner_id": "089656430107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-4a24292f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:089656430107:security-group/sg-03378a61b838231b1",
            "description": "Security group for web that allows web traffic from internet",
            "egress": [],
            "id": "sg-03378a61b838231b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-web-example",
            "name_prefix": null,
            "owner_id": "089656430107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-default-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-4a24292f"
          }
        }
      ]
    }
  ]
}